--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
 		<img src = "images/wisconsin_dells.jpg" alt = "Three children smiling by a lake" width="25"/>
 		<img src = "images/badlands.jpg" alt = "Three children posing by a Badlans National Park sign" width="1000"/>
 		<img src = "images/falling.jpg" alt = "A boy looking like he is falling" width="25"/>
-		<img src ="images/jewel_cave.jpg" alt = "Three children smiliing by a Jewel Cave National Monument sign" width="1000"/>
+		<img src ="images/jewel_cave.JPG" alt = "Three children smiliing by a Jewel Cave National Monument sign" width="1000"/>
 	</main>
 	<footer>Colleen van Lent &copy; 2020</footer>
 </body>
