--- a/personal.html
+++ b/personal.html
@@ -28,7 +28,9 @@
 		<img src = "images/falling.jpg" alt = "A boy looking like he is falling" width="25"/>
 		<img src ="images/jewel_cave.JPG" alt = "Three children smiliing by a Jewel Cave National Monument sign" width="1000"/>
 	</main>
-	<footer>Colleen van Lent &copy; 2020</footer>
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
 
