--- a/random.html
+++ b/random.html
@@ -5,7 +5,7 @@
 	You will find any errors from the head section using the console. -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="imgs/favicon">
+	<link rel="icon" href="images/favicon.ico">
 	<link rel="stylesheet" href="css/html5reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
@@ -20,9 +20,9 @@
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
+		<h1>Random Page</h1>
 	</header>
 <main>
-	<h1>Random Page</h1>
 
 	<p>Make sure you are doing the readings from 
 		<a href= "https://www.codecademy.com/">Code Academy</a>.  You can also 
